@@ -7,6 +7,16 @@
 * Cillian de Roiste
 * Miron Tewfik
 * Robert Heckel
+* Stefan Krauth
+* Giuseppe Guida
+* Richard Dooling
+* Nigel McNie
+* Paulo Tanimoto
+* Nathan Saper
+* Albert Menkveld
+* Ian Taylor
+* Thomas Svensen
+* Ramana Kumar
 
 I want to say a big <b>THANK YOU</b> for all people which supported this project in this way.
 </pre>
